tests/input/parse/call-1.bkr


def f(b : bool, n : int) -> void { }

def g() -> void { 
  f();        // error too few arguments
  f(0, 1, 2); // error: too many arguments
  f(0, true); // error: type mismatch
  f(true, 0); // OK
}
